[tool.poetry]
name = "utility-braze"
version = "0.1.0"
description = ""
authors = ["dan-kwon <danielkwon02@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "utility_braze"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pandas = "^2.0.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
